--- a/views/nutrient_mgt_reco.hbs
+++ b/views/nutrient_mgt_reco.hbs
@@ -41,6 +41,9 @@
                   {{!-- TAB 2 --}}
                   <div class="tab-pane show active" id="manage_reco" role="tabpanel" aria-labelledby="inactive-users-tab">
                       <div class="text-dark">
+                        <div>
+                          <small class="text-danger">*Deleting all custom plan items would mean deletion of the custom plan</small>
+                        </div>
                           {{#each cnr_plans}}
                             <div class="form-row" name="item{{@index}}">
                               <div id="" name="manage_reco_name_cont{{@index}}">
@@ -112,7 +115,7 @@
                                     <div class="d-flex">
                                       <label class="col-form-label">DAT</label>
                                       <div class="ml-3">
-                                        <input type="number" class="form-control" id="dat" name="dat" placeholder="0" minlength="0" style="width: 120px !important;" value="{{this.dat}}" disabled>
+                                        <input type="number" class="form-control" id="dat" name="dat" placeholder="0" min="0" style="width: 120px !important;" value="{{this.dat}}" disabled>
                                       </div>
                                     </div>
 
@@ -247,7 +250,7 @@
                                 <div class="d-flex">
                                   <label class="col-form-label">DAT</label>
                                   <div class="ml-3">
-                                    <input type="number" class="form-control" id="dat" name="dat" placeholder="0" minlength="0" style="width: 120px !important;">
+                                    <input type="number" class="form-control" id="dat" name="dat" placeholder="0" min="0" style="width: 120px !important;">
                                   </div>
                                 </div>
 
@@ -590,8 +593,12 @@
         item_err = 1;
       }
 
-      if ($($(rows[i]).children()[0]).find(`input[name="dat"]`).val() == '' || $($(rows[i]).children()[0]).find(`input[name="dat"]`).val() == 0) {
+      if ($($(rows[i]).children()[0]).find(`input[name="dat"]`).val() == '') {
         $($(rows[i]).children()[0]).append(`<span class="text-danger">DAT cannot be empty!</span>`);
+        item_err = 1;
+      }
+      else if ($($(rows[i]).children()[0]).find(`input[name="dat"]`).val() < 0) {
+        $($(rows[i]).children()[0]).append(`<span class="text-danger">DAT cannot be negative!</span>`);
         item_err = 1;
       }
 
@@ -634,8 +641,7 @@
       temp_arr = define_plan_arr;
     else
       temp_arr = manage_plan_arr;
-
-    temp_arr.splice(index, 1);
+   temp_arr.splice(index, 1);
   });
 
   $('table').on('click', 'button[name="erase"]', function() {
@@ -701,7 +707,7 @@
     var table  = $(this).parent().parent().parent().parent();
     var plan_item_count = $(table).children().children().length-1;
     var plan_count = $(table).attr('id').replace('manage_table', '');
-    $(table).append(`<tr> <td style="width: 180px;"> <div class="d-flex"> <label class="col-form-label">DAT</label> <div class="ml-3"> <input type="number" class="form-control" id="dat" name="dat" placeholder="0" minlength="0" style="width: 120px !important;" value="{{this.dat}}" > </div> </div> </td> <td> <div class=""> <select class="form-control" id="manage_fertilizer" name="manage_fertilizer" required style="width: min-content;"> ${opts} </select> </div> </td> <td> <div class="d-flex mt-2 h-100"> <div id="manage_formula_container${plan_item_count}" class="d-flex formula_cont"><div class="formula_item">=</div></div> <div class="ml-auto"> <div class="nav-item dropdown no-arrow btn-dropdown " style="" id="action_menu"> <button type="button" class="btn btn-dark dropdown-toggle item_dropdown" aria-expanded="true" data-toggle="dropdown" style="" id=""> <span class="d-none d-lg-inline me-2 small formula_menu_span" style="">Formula Menu</span> </button> <div class="dropdown-menu notSidebar formula-menu" style="width: fit-content;" aria-describedby="plan${plan_count}" aria-labelledby="manage_menu" value="${plan_item_count}"> <h6 class="dropdown-header">Operands</h6> <a class="dropdown-item notSidebar" href="#" name="menu_add" value="1">Add</a> <a class="dropdown-item notSidebar" href="#" name="menu_subtract" value="2">Subtract</a> <a class="dropdown-item notSidebar" href="#" name="menu_multiply" value="3">Multiply</a> <a class="dropdown-item notSidebar" href="#" name="menu_divide" value="4">Divide</a> <div class="dropdown-divider"></div> <h6 class="dropdown-header">Round Brackets</h6> <a class="dropdown-item notSidebar" href="#" name="menu_open_parentheses" value="5">Open Parentheses</a> <a class="dropdown-item notSidebar" href="#" name="menu_closing_parentheses" value="6">Closing Parentheses</a> <div class="dropdown-divider"></div> <h6 class="dropdown-header">Variables</h6> <a class="dropdown-item notSidebar" href="#" name="menu_farm_area" value="7">Farm Area</a> <a class="dropdown-item notSidebar" href="#" name="menu_fertilizer_value" value="8">Fertilizer Nutrient Value</a> <a class="dropdown-item notSidebar" href="#" name="menu_total_requirement" value="9">Total Nutrient Reqs</a> <a class="dropdown-item notSidebar" href="#" name="menu_number" value="10">Input Number</a> </div> </div> </div> </div> </td> <td> <div class="d-flex " aria-describedby="plan${plan_count}"> <button class="icon-btn-trash mt-1" type="button" name="erase" value="manage"><i class="fas fa-thin fa-eraser"></i></button> <button class="icon-btn-trash mt-1" type="button" name="trash" value="manage"><i class="fas fa-trash"></i></button> </div> </td> </tr>`);
+    $(table).append(`<tr> <td style="width: 180px;"> <div class="d-flex"> <label class="col-form-label">DAT</label> <div class="ml-3"> <input type="number" class="form-control" id="dat" name="dat" placeholder="0" min="0" style="width: 120px !important;" value="{{this.dat}}" > </div> </div> </td> <td> <div class=""> <select class="form-control" id="manage_fertilizer" name="manage_fertilizer" required style="width: min-content;"> ${opts} </select> </div> </td> <td> <div class="d-flex mt-2 h-100"> <div id="manage_formula_container${plan_item_count}" class="d-flex formula_cont"><div class="formula_item">=</div></div> <div class="ml-auto"> <div class="nav-item dropdown no-arrow btn-dropdown " style="" id="action_menu"> <button type="button" class="btn btn-dark dropdown-toggle item_dropdown" aria-expanded="true" data-toggle="dropdown" style="" id=""> <span class="d-none d-lg-inline me-2 small formula_menu_span" style="">Formula Menu</span> </button> <div class="dropdown-menu notSidebar formula-menu" style="width: fit-content;" aria-describedby="plan${plan_count}" aria-labelledby="manage_menu" value="${plan_item_count}"> <h6 class="dropdown-header">Operands</h6> <a class="dropdown-item notSidebar" href="#" name="menu_add" value="1">Add</a> <a class="dropdown-item notSidebar" href="#" name="menu_subtract" value="2">Subtract</a> <a class="dropdown-item notSidebar" href="#" name="menu_multiply" value="3">Multiply</a> <a class="dropdown-item notSidebar" href="#" name="menu_divide" value="4">Divide</a> <div class="dropdown-divider"></div> <h6 class="dropdown-header">Round Brackets</h6> <a class="dropdown-item notSidebar" href="#" name="menu_open_parentheses" value="5">Open Parentheses</a> <a class="dropdown-item notSidebar" href="#" name="menu_closing_parentheses" value="6">Closing Parentheses</a> <div class="dropdown-divider"></div> <h6 class="dropdown-header">Variables</h6> <a class="dropdown-item notSidebar" href="#" name="menu_farm_area" value="7">Farm Area</a> <a class="dropdown-item notSidebar" href="#" name="menu_fertilizer_value" value="8">Fertilizer Nutrient Value</a> <a class="dropdown-item notSidebar" href="#" name="menu_total_requirement" value="9">Total Nutrient Reqs</a> <a class="dropdown-item notSidebar" href="#" name="menu_number" value="10">Input Number</a> </div> </div> </div> </div> </td> <td> <div class="d-flex " aria-describedby="plan${plan_count}"> <button class="icon-btn-trash mt-1" type="button" name="erase" value="manage"><i class="fas fa-thin fa-eraser"></i></button> <button class="icon-btn-trash mt-1" type="button" name="trash" value="manage"><i class="fas fa-trash"></i></button> </div> </td> </tr>`);
     manage_plan_arr[$(table).attr('id').replace('manage_table', '')].push([]);
   });
 
@@ -712,7 +718,7 @@
   $('#btn_add').on('click', function() {
     count++;
 
-    $('#table').append(`<tr> <td style="width: 180px;"> <div class="d-flex"> <label class="col-form-label">DAT</label> <div class="ml-3"> <input type="number" class="form-control" id="dat" name="dat" placeholder="0" minlength="0" style="width: 120px !important;"> </div> </div> </td> <td> <div class=""> <select class="form-control" id="fertilizer" name="fertilizer" required="" style="width: min-content;">${opts} </select> </div> </td> <td> <div class="d-flex mt-2"> <div id="define_formula_container${count}" class="d-flex formula_cont"><div class="formula_item">=</div></div> <div class="ml-auto"> <div class="nav-item dropdown no-arrow btn-dropdown" style="" id="action_menu"> <button type="button" class="btn btn-dark dropdown-toggle item_dropdown" aria-expanded="true" data-toggle="dropdown" style="" id=""> <span class="d-none d-lg-inline me-2 small formula_menu_span" style="">Formula Menu</span> </button> <div class="dropdown-menu notSidebar formula-menu" style="width: fit-content;" aria-labelledby="define_menu" value="${count}"> <h6 class="dropdown-header">Operands</h6> <a class="dropdown-item notSidebar" href="#" name="menu_add" value="1">Add</a> <a class="dropdown-item notSidebar" href="#" name="menu_subtract" value="2">Subtract</a> <a class="dropdown-item notSidebar" href="#" name="menu_multiply" value="3">Multiply</a> <a class="dropdown-item notSidebar" href="#" name="menu_divide" value="4">Divide</a> <div class="dropdown-divider"></div> <h6 class="dropdown-header">Round Brackets</h6> <a class="dropdown-item notSidebar" href="#" name="menu_open_parentheses" value="5">Open Parentheses</a> <a class="dropdown-item notSidebar" href="#" name="menu_closing_parentheses" value="6">Closing Parentheses</a> <div class="dropdown-divider"></div> <h6 class="dropdown-header">Variables</h6> <a class="dropdown-item notSidebar" href="#" name="menu_farm_area" value="7">Farm Area</a> <a class="dropdown-item notSidebar" href="#" name="menu_fertilizer_value" value="8">Fertilizer Nutrient Value</a> <a class="dropdown-item notSidebar" href="#" name="menu_total_requirement" value="9">Total Nutrient Reqs</a> <a class="dropdown-item notSidebar" href="#" name="menu_number" value="10">Input Number</a></div> </div> </div> </div> </td> <td><div class="d-flex"><button class="icon-btn-trash mt-1" type="button" name="erase" value="define"><i class="fas fa-thin fa-eraser"></i></button><button class="icon-btn-trash mt-1" type="button" name="trash" value="define"><i class="fas fa-trash"></i></button></div></td> </tr>`);
+    $('#table').append(`<tr> <td style="width: 180px;"> <div class="d-flex"> <label class="col-form-label">DAT</label> <div class="ml-3"> <input type="number" class="form-control" id="dat" name="dat" placeholder="0" min="0" style="width: 120px !important;"> </div> </div> </td> <td> <div class=""> <select class="form-control" id="fertilizer" name="fertilizer" required="" style="width: min-content;">${opts} </select> </div> </td> <td> <div class="d-flex mt-2"> <div id="define_formula_container${count}" class="d-flex formula_cont"><div class="formula_item">=</div></div> <div class="ml-auto"> <div class="nav-item dropdown no-arrow btn-dropdown" style="" id="action_menu"> <button type="button" class="btn btn-dark dropdown-toggle item_dropdown" aria-expanded="true" data-toggle="dropdown" style="" id=""> <span class="d-none d-lg-inline me-2 small formula_menu_span" style="">Formula Menu</span> </button> <div class="dropdown-menu notSidebar formula-menu" style="width: fit-content;" aria-labelledby="define_menu" value="${count}"> <h6 class="dropdown-header">Operands</h6> <a class="dropdown-item notSidebar" href="#" name="menu_add" value="1">Add</a> <a class="dropdown-item notSidebar" href="#" name="menu_subtract" value="2">Subtract</a> <a class="dropdown-item notSidebar" href="#" name="menu_multiply" value="3">Multiply</a> <a class="dropdown-item notSidebar" href="#" name="menu_divide" value="4">Divide</a> <div class="dropdown-divider"></div> <h6 class="dropdown-header">Round Brackets</h6> <a class="dropdown-item notSidebar" href="#" name="menu_open_parentheses" value="5">Open Parentheses</a> <a class="dropdown-item notSidebar" href="#" name="menu_closing_parentheses" value="6">Closing Parentheses</a> <div class="dropdown-divider"></div> <h6 class="dropdown-header">Variables</h6> <a class="dropdown-item notSidebar" href="#" name="menu_farm_area" value="7">Farm Area</a> <a class="dropdown-item notSidebar" href="#" name="menu_fertilizer_value" value="8">Fertilizer Nutrient Value</a> <a class="dropdown-item notSidebar" href="#" name="menu_total_requirement" value="9">Total Nutrient Reqs</a> <a class="dropdown-item notSidebar" href="#" name="menu_number" value="10">Input Number</a></div> </div> </div> </div> </td> <td><div class="d-flex"><button class="icon-btn-trash mt-1" type="button" name="erase" value="define"><i class="fas fa-thin fa-eraser"></i></button><button class="icon-btn-trash mt-1" type="button" name="trash" value="define"><i class="fas fa-trash"></i></button></div></td> </tr>`);
 
     registerDropdownEvent();
   });
